updates to handlebars files

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,37 +1,79 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <script src ="handlebars-v4.0.2.js"></script>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/js/style/style.css"></link>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  </body>
+    <title>Document</title>
 </head>
 
+<div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
+  Example element with utilities
+</div>
+
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    {{#if logged_in}}
-       <h1> Welcome, {{username}}! </h1>
-      <p>You are currently logged in.</p>
-    <nav>
-      <button class="btn" id="logout">logout</button>
-    </nav>
-    {{else}}
-      <h1>Welcome!</h1>
-      <p>Please log in to access all features.</p>
-    {{/if}}
-  </header>
-  <main class="container container-fluid mt-5">
-    {{{ body }}}
-  </main>
-  <footer>
-      
+    <div class="container2">
+     <div class="buttoncontainer">
+  <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Dropdown button
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul>
+</div>
+
+
+      <button id="dog">
+        Home
+      </button>
+      <button id="cat">
+        Dashboard
+      </button>
+      <button id="other">
+        Login/Logout
+      </button>
+    </div>
+    <div>Pedal Stool</div>
+    <div id="zipDiv">
+      <button type="submit" id="zipBtn">Create New Post</button>
+    </div>
+  </div>
+
+  <footer class="updated">
+
   </footer>
 
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
+  <div>
+    <div class="image3">
+      <div class="textbox">Recently Posted:</div>
+      <div class="container-md1">100% wide until medium breakpoint</div>
+      <div class="container-md2">100% wide until medium breakpoint</div>
+      <div class="container-md3">100% wide until medium breakpoint</div>
+    </div>
+  </div>
+
+<div id="favorites-list">Click to view more content</div>
+
+    <script src="handlebars-v4.0./2.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </body>
+
+ <header class="footer2"> <button id="navbar" class="js-modal-trigger" data-input="modal-js-example">
+      Home
+    </button>
+    <button id="navbar" class="js-modal-trigger" data-input="modal-js-example">
+      Dashboard
+    </button>
+    <button id="navbar" class="js-modal-trigger" data-input="modal-js-example">
+      Logout
+    </button>
+    <div class="ourtitle" Pedal Stool></div>
+  </header>
 
 </html>
