Fixed errors that were in routes and created some sample data in handlebars that will allow data to populate in the home page.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,16 +11,9 @@
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
-    {{#if logged_in}}
-       <h1> Welcome, {{username}}! </h1>
-      <p>You are currently logged in.</p>
-    <nav>
-      <button class="btn" id="logout">logout</button>
-    </nav>
-    {{else}}
-      <h1>Welcome!</h1>
-      <p>Please log in to access all features.</p>
-    {{/if}}
+    <h1>
+      User Registry
+    </h1>
   </header>
   <main class="container container-fluid mt-5">
     {{{ body }}}
@@ -28,10 +21,6 @@
   <footer>
       
   </footer>
-
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
 </body>
 
 </html>
