--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,10 @@
 {{#each blogList as |blog| }}
 <div class="row align-center mb-5">
-  <div class="col-md-6">
-    <h2>{{blog.title}}</h2>
-  </div>
+  <a href="/blogPost/{{id}}">
+    <div class="col-md-6">
+      <h2>{{blog.title}}</h2>
+    </div>
+  </a>
   <div class="col-md-6">
     <p>{{blog.content}}</p>
   </div>
