--- a/public/js/style/style.css
+++ b/public/js/style/style.css
@@ -1,154 +1,84 @@
 * {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:sans-serif, Georgia, Times, 'Times New Roman', serif;
 }
 
-a:active {
-    color: black;
-}
+@font-face {
+    font-family: myFirstFont;
+    src: url(Acme-Regular.ttf);
+ }
 
-.container1 {
-    color: rgb(0, 0, 0);
-    height: 220px;
+.headerContainer {
+    background-color: rgb(0, 46, 93);
+    color: rgb(255, 255, 255);
+    height: 100px;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content:space-evenly;
     padding-bottom: 1px;
     width: 100%;
     font-size: 70px;
-
 }
 
-.ourtitle {
-    font-size: larger;
-    color: black;
-}
-
-#image1 {
-    padding: 8px;
-    width: 200px;
-    height: 200px;
-    background: #000000;
-    border-radius: 50%;
-}
-
-#image2 {
-    padding: 8px;
-    width: 200px;
-    height: 200px;
-    background: #000000;
-    border-radius: 50%;
-}
-
-.container2 {
-    background-color: rgb(0, 0, 0);
+.dashboardContainer {
+    background-color: rgb(0, 46, 93);
     color: white;
-    height: 68px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    font-size: 50px;
-}
-
-#zipRequest {
-    background-color: black;
-    color: rgb(255, 255, 255);
-    border-radius: 4px;
-    font-size: 20px;
-    padding: 10px;
-}
-
-#zipInput {
-    border-radius: 4px;
-    height: 50px;
-    width: 200px;
-    padding-top: 5px;
-}
-
-#zipDiv {
-    color: rgb(0, 0, 0);
-    padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 20px;
-}
-
-#zipBtn:hover {
-    color: rgb(0, 89, 255)
-}
-
-#navbar {
-    color: black;
-    border-color: black;
-    border-width: 2px;
-    width: 200px;
-    height: 50px;
-    border-radius: 4px;
-    font-size: 20px;
-}
-
-#navbar:hover {
-    cursor: pointer;
-    color: rgb(0, 89, 255);
-    font-size: 22px;
-    border-color: rgb(0, 89, 255);
-}
-
-.buttoncontainer {
-    width: 400px;
+    height: 78px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    width: 34%;
+    font-size: 50px;
 }
 
-#dog {
+.titleContainer {
+    background-color: rgb(0, 46, 93);
+    height: 78px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 34%;
+    font-size: 50px;
+}
+
+.createpostsContainer {
+    background-color: rgb(0, 46, 93);
+    color: white;
+    height: 78px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 34%;
+    font-size: 50px;
+}
+
+#home {
+    border-color: black;
+    border-width: 2px;
+    color: black;
+    height: 40px;
+    width: 100px;
+    border-radius: 4px;
+    font-size: 15px;
+}
+
+#dashboard {
     border-color: black;
     border-width: 2px;
     color: black;
     height: 50px;
-    width: 200px;
+    width: 100px;
     border-radius: 4px;
-    font-size: 20px;
+    font-size: 15px;
 }
 
-#cat {
+#login {
     border-color: black;
     border-width: 2px;
     color: black;
     height: 50px;
-    width: 200px;
+    width: 100px;
     border-radius: 4px;
-    font-size: 20px;
-}
-
-#other {
-    border-color: black;
-    border-width: 2px;
-    color: black;
-    height: 50px;
-    width: 200px;
-    border-radius: 4px;
-    font-size: 20px;
-}
-
-#dog:hover {
-    color: rgb(0, 89, 255);
-    font-size: 22px;
-    cursor: pointer;
-    border-color: rgb(0, 89, 255);
-}
-
-#cat:hover {
-    color: rgb(0, 89, 255);
-    font-size: 22px;
-    cursor: pointer;
-    border-color: rgb(0, 89, 255);
-}
-
-#other:hover {
-    color: rgb(0, 89, 255);
-    font-size: 22px;
-    cursor: pointer;
-    border-color: rgb(0, 89, 255);
+    font-size: 15px;
 }
 
 .textbox {
@@ -157,145 +87,54 @@ a:active {
     padding-left: 4px;
 }
 
-.containerCenter {
-    color: white;
-    height: 280px;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    font-size: 50px;
-    flex-wrap: wrap;
-    justify-content: center;
-    border-color: black;
-    padding: 8px;
-}
-
-.boxes {
-    background-color: rgb(255, 107, 107);
-    width: 400px;
-    height: 200px;
-    margin: 15px;
-    color: rgb(255, 255, 255);
-    border-style:solid;
-    border: 2px;
-    border-color:  rgb(0, 0, 0);
-    font-size: 18px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-   /* justify-content: flex-end; */
-    flex-direction: column;
-    align-content: flex-end;
-}
-
-/* I'm going to add in features that allow us to style the API information. */
-
-.footer1 {
-    color: rgb(0, 0, 0);
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content:space-around;
-    width: 100%;
-    font-size: 40px;
-}
-
-.footer1:hover {
-    color: rgb(0, 89, 255);
-    font-size: 42px;
-    cursor: pointer;
-}
-
-.footer2 {
-    background-color: rgb(254, 254, 254);
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    width: 100%;
-    font-size: 50px;
-}
-
-.updated {
+.divider {
     color: rb(255, 255, 255);
-    height: 26px;
-    font-size: 30px;
-    justify-content: center;
-    display: flex;
-    align-items: center;
+    height: 2px;
 }
 
-.image3 {
+.blogMain {
+    padding-top: 15px;
+    padding-left: 150px;
     background-size: 2000px;
-    border: 2px solid;
-    background-color: blue;
+    background-image: linear-gradient(rgb(85, 170, 255), rgb(0, 46, 93));
+    display: flex;
+    align-items: right;
+    flex-direction: column;
+    height: 800px;
+}
+
+.commentManager {
+    padding-top: 3px;
+    padding-bottom: 3px;
+    width: 1000px;
     display: flex;
     align-items: center;
-    justify-content:center;
-    flex-direction: column;
-    height: 500px;
+    justify-content:right;
 }
 
 .container-md1 {
-    height: 120px;
+    height: 180px;
     background-color: white;
     padding: 10px;
     width: 1000px;
-    display: flex;
-    align-items: center;
-    justify-content:center;
 }
 
 .container-md2 {
-    height: 120px;
+    height: 180px;
     background-color: white;
     padding: 10px;
     width: 1000px;
-    display: flex;
-    align-items: center;
-    justify-content:center;
 }
 
 .container-md3 {
-    height: 120px;
+    height: 180px;
     background-color: white;
     padding: 10px;
     width: 1000px;
-    display: flex;
-    align-items: center;
-    justify-content:center;
 }
 
-@media (max-width:867px) {
-.container1 {
-    font-size: 60px;
-    display: block;
+.voteCounterContainer {
+    background-color: white;
+    width: 300px;
+    height: 200px;
 }
-#image1 {
-    visibility: hidden;
-    height: 1px;
-    width: 1px;
-}
-#image2 {
-    height: 1px;
-    width: 1px;
-    visibility: hidden;
-}
-}
-
-@media (max-width:800px) {
-    #zipRequest {
-        font-size: 10px;
-    }
-    }
-
-    #favorites-list {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        text-align: center;
-        background-color: greenyellow;
-    }
-
