updating file path to our font styling

--- a/public/js/style/style.css
+++ b/public/js/style/style.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: myFirstFont;
-    src: url(Acme-Regular.ttf);
+    src: url(/js/style/Acme-Regular.ttf);
  }
 
 .headerContainer {
