--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
   <style>
     @font-face {
       font-family: myFirstFont;
-      src: url(Acme-Regular.ttf)
+      src: url(/js/style/Acme-Regular.ttf)
     }
 
     * {
