--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,10 +21,6 @@
       font-family: myFirstFont;
     }
   </style>
-  </body>
-  <title>Document</title>
-</head>
-
 <body>
   <div class="headerContainer">
     <div class="dashboardContainer">
@@ -52,59 +48,59 @@
     <div class="postManager">
       <div class="textbox">Top Posts:</div>
       <div class="container-md1">
-        <button type="button" style="width: 30%" class="btn btn-outline-warning">USER</button>
-        <button type="button" style="width: 60%" class="btn btn-outline-info">BLOG SUBJECT</button>
-        <button type="button" class="btn btn-success">⬆</button>
-        <button type="button" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 22%" class="btn btn-info">USER</button>
+        <button type="button" style="width: 25%" class="btn btn-info">SUBJECT</button>
+        <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
+        <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
+        <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
+        <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 20%" class="btn btn-warning">Add Comment</button>
         100% wide until medium breakpoint
       </div>
       <div class="commentManager">
-        <button type="button" class="btn btn-outline-warning">Add Comment</button>
+        <button type="button" class="btn btn-warning"></button>
       </div>
       <div class="container-md2">
-        <button type="button" style="width: 30%" class="btn btn-outline-warning">USER</button>
-        <button type="button" style="width: 60%" class="btn btn-outline-info">BLOG SUBJECT</button>
-        <button type="button" class="btn btn-success">⬆</button>
-        <button type="button" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 22%" class="btn btn-info">USER</button>
+        <button type="button" style="width: 25%" class="btn btn-info">SUBJECT</button>
+        <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
+        <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
+        <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
+        <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 20%" class="btn btn-warning">Add Comment</button>
         100% wide until medium breakpoint
       </div>
       <div class="commentManager">
-        <button type="button" class="btn btn-outline-warning">Add Comment</button>
+        <button type="button" class="btn btn-warning"></button>
       </div>
       <div class="container-md3">
-        <button type="button" style="width: 30%" class="btn btn-outline-warning">USER</button>
-        <button type="button" style="width: 60%" class="btn btn-outline-info">BLOG SUBJECT</button>
-        <button type="button" class="btn btn-success">⬆</button>
-        <button type="button" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 22%" class="btn btn-info">USER</button>
+        <button type="button" style="width: 25%" class="btn btn-info">SUBJECT</button>
+        <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
+        <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
+        <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
+        <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 20%" class="btn btn-warning">Add Comment</button>
         100% wide until medium breakpoint
       </div>
       <div class="commentManager">
-        <button type="button" class="btn btn-outline-warning">Add Comment</button>
-      </div>
-    </div>
-    <div class="voteCounterContainer">
-      <div class="votes">
+        <button type="button" class="btn btn-outline-warning"></button>
       </div>
     </div>
   </div>
+  <div class="voteCounterContainer1">
+  </div>
+</div>
 </div>
 
-<div id="favorites-list">Click to view more content</div>
+<div class="moreInfo">
+  <button type="button" style='width:125px' class="btn btn-outline-light">Report</button>
+  <button type="button" style='width:125px' class="btn btn-outline-light">Contact</button>
+  <button type="button" style='width:125px' class="btn btn-outline-light">More Info</button>
+</div>
 
 <script src="handlebars-v4.0./2.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 </body>
-
-<header class="footer2"> <button id="navbar" class="js-modal-trigger" data-input="modal-js-example">
-    Home
-  </button>
-  <button id="navbar" class="js-modal-trigger" data-input="modal-js-example">
-    Dashboard
-  </button>
-  <button id="navbar" class="js-modal-trigger" data-input="modal-js-example">
-    Logout
-  </button>
-  <div class="ourtitle" Pedal Stool></div>
-</header>
 
 </html>
