--- a/public/js/style/style.css
+++ b/public/js/style/style.css
@@ -6,9 +6,6 @@
     font-family: myFirstFont;
     src: url(/js/style/Acme-Regular.ttf);
  }
- * {
-    font-family:sans-serif, Georgia, Times, 'Times New Roman', serif;
-}
 
 .headerContainer {
     background-color: rgb(0, 46, 93);
@@ -84,10 +81,17 @@
     font-size: 15px;
 }
 
-.textbox {
+.textbox1 {
     font-size: 30px;
-    color: rgb(255, 255, 255);
-    padding-left: 4px;
+    padding-right: 10px;
+    padding-left: 20px;
+    background-color: rgb(14, 184, 223);
+}
+
+.textbox2 {
+    font-size: 30px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .divider {
@@ -96,76 +100,61 @@
     size: 2000px;
 }
 
-.mainSection {
+.mainPage {
+    background-image: linear-gradient(rgb(14, 184, 223), rgb(0, 46, 93));
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    flex-direction: center;
 }
 
 .blogMain {
-    padding-top: 15px;
-    padding-left: 125px;
-    background-size: 2000px;
+    padding-left: 20px;
+    width: 50%;
     background-image: linear-gradient(rgb(14, 184, 223), rgb(0, 46, 93));
     display: flex;
-    align-items: right;
+    align-items: top;
+    flex-direction: center;
+    height: 800px;
+}
+
+.blogComment {
+    padding-top: 80px;
+    padding-left: 55px;
+    width: 40%;
+    background-image: linear-gradient(rgb(14, 184, 223), rgb(0, 46, 93));
+    display: flex;
+    align-items: left;
     flex-direction: column;
     height: 800px;
 }
 
-.commentManager {
-    padding-top: 3px;
-    padding-bottom: 3px;
-    width: 1000px;
-    display: flex;
-    align-items: center;
-    justify-content:right;
-}
-
 .container-md1 {
-    height: 180px;
+    height: 350px;
     background-color: white;
     padding: 10px;
     width: 1300px;
     border-radius: 15px;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
 }
 
 .container-md2 {
-    height: 180px;
+    height: 175px;
     background-color: white;
     padding: 10px;
-    width: 1300px;
+    width: 850px;
     border-radius: 15px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
 }
 
-.container-md3 {
-    height: 180px;
-    background-color: white;
-    padding: 10px;
-    width: 1300px;
-    border-radius: 15px;
-}
-
-.voteCounterContainer1 {
-    background-image: linear-gradient(rgb(14, 184, 223), rgb(0, 46, 93));
-    width: 400px;
-    height: 200px;
-    height: 800px;
+.moreInfo {
+    height: 100px;
     display: flex;
     align-items: center;
-    justify-content: center;
-}
-
-.votes {
-    background-color: white;
-    width: 100px;
-    height: 180px;
-}
-
-.voteCounterContainer2 {
-    background-image: linear-gradient(rgb(14, 184, 223), rgb(0, 46, 93));
-    width: 300px;
-    height: 200px;
-    height: 800px;
-    padding-left: 10px;
+    justify-content: left;
+    background-color: rgb(0, 46, 93);
+    padding: 20px;
 }
