--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,9 @@
       font-family: myFirstFont;
     }
   </style>
+  </body>
+  <title>Document</title>
+</head>
 <body>
   <div class="headerContainer">
     <div class="dashboardContainer">
@@ -41,57 +44,56 @@
     </div>
   </div>
   <div class="divider"></div>
+  <div class="textbox1">Top Posts:</div>
 
 </body>
-<div class="mainSection">
+  <div class="mainPage">
   <div class="blogMain">
-    <div class="postManager">
-      <div class="textbox">Top Posts:</div>
       <div class="container-md1">
-        <button type="button" style="width: 22%" class="btn btn-info">USER</button>
-        <button type="button" style="width: 25%" class="btn btn-info">SUBJECT</button>
+        <button type="button" style="width: 20%" class="btn btn-info">{{ USER }}</button>
+        <button type="button" style="width: 25%" class="btn btn-info">Topic</button>
         <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
         <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
         <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
         <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
-        <button type="button" style="width: 20%" class="btn btn-warning">Add Comment</button>
-        100% wide until medium breakpoint
+        <button type="button" style="width: 22%" class="btn btn-warning">Add Comment</button>
+        POST:
       </div>
-      <div class="commentManager">
-        <button type="button" class="btn btn-warning"></button>
+    </div>
+    <div class="blogComment">
+      <div class="textbox2">Top Comments:</div>
+      <div class="container-md2">
+        <button type="button" style="width: 20%" class="btn btn-info">{{ USER }}</button>
+        <button type="button" style="width: 22%" class="btn btn-info">Comment</button>
+        <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
+        <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
+        <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
+        <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 22%" class="btn btn-warning">Add Comment</button>
+        POST:
       </div>
       <div class="container-md2">
-        <button type="button" style="width: 22%" class="btn btn-info">USER</button>
-        <button type="button" style="width: 25%" class="btn btn-info">SUBJECT</button>
+        <button type="button" style="width: 20%" class="btn btn-info">{{ USER }}</button>
+        <button type="button" style="width: 22%" class="btn btn-info">Comment</button>
         <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
         <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
         <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
         <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
-        <button type="button" style="width: 20%" class="btn btn-warning">Add Comment</button>
-        100% wide until medium breakpoint
+        <button type="button" style="width: 22%" class="btn btn-warning">Add Comment</button>
+        POST:
       </div>
-      <div class="commentManager">
-        <button type="button" class="btn btn-warning"></button>
-      </div>
-      <div class="container-md3">
-        <button type="button" style="width: 22%" class="btn btn-info">USER</button>
-        <button type="button" style="width: 25%" class="btn btn-info">SUBJECT</button>
+      <div class="container-md2">
+        <button type="button" style="width: 20%" class="btn btn-info">{{ USER }}</button>
+        <button type="button" style="width: 22%" class="btn btn-info">Comment</button>
         <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
         <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
         <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
         <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
-        <button type="button" style="width: 20%" class="btn btn-warning">Add Comment</button>
-        100% wide until medium breakpoint
-      </div>
-      <div class="commentManager">
-        <button type="button" class="btn btn-outline-warning"></button>
+        <button type="button" style="width: 22%" class="btn btn-warning">Add Comment</button>
+        POST:
       </div>
     </div>
   </div>
-  <div class="voteCounterContainer1">
-  </div>
-</div>
-</div>
 
 <div class="moreInfo">
   <button type="button" style='width:125px' class="btn btn-outline-light">Report</button>
