--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,9 +21,10 @@
       font-family: myFirstFont;
     }
   </style>
-  </body>
+    </body>
   <title>Document</title>
 </head>
+
 <body>
   <div class="headerContainer">
     <div class="dashboardContainer">
@@ -44,51 +45,43 @@
     </div>
   </div>
   <div class="divider"></div>
-  <div class="textbox1">Top Posts:</div>
+  <div class="textbox1">Posts:</div>
 
 </body>
   <div class="mainPage">
   <div class="blogMain">
       <div class="container-md1">
         <button type="button" style="width: 20%" class="btn btn-info">{{ USER }}</button>
-        <button type="button" style="width: 25%" class="btn btn-info">Topic</button>
-        <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
-        <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
-        <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
-        <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 20%" class="btn btn-info">Topic</button>
+        <button type="button" style="width: 18%" class="btn btn-success">⬆ Upvotes: </button>
+        <button type="button" style="width: 18%" class="btn btn-danger">⬇ Downvotes: </button>
         <button type="button" style="width: 22%" class="btn btn-warning">Add Comment</button>
         POST:
       </div>
     </div>
     <div class="blogComment">
-      <div class="textbox2">Top Comments:</div>
+      <div class="textbox2">Comments:</div>
       <div class="container-md2">
         <button type="button" style="width: 20%" class="btn btn-info">{{ USER }}</button>
-        <button type="button" style="width: 22%" class="btn btn-info">Comment</button>
-        <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
-        <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
-        <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
-        <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 20%" class="btn btn-info">Comment</button>
+        <button type="button" style="width: 18%" class="btn btn-success">⬆ Upvotes: </button>
+        <button type="button" style="width: 18%" class="btn btn-danger">⬇ Downvotes: </button>
         <button type="button" style="width: 22%" class="btn btn-warning">Add Comment</button>
         POST:
       </div>
       <div class="container-md2">
         <button type="button" style="width: 20%" class="btn btn-info">{{ USER }}</button>
-        <button type="button" style="width: 22%" class="btn btn-info">Comment</button>
-        <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
-        <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
-        <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
-        <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 20%" class="btn btn-info">Comment</button>
+        <button type="button" style="width: 18%" class="btn btn-success">⬆ Upvotes: </button>
+        <button type="button" style="width: 18%" class="btn btn-danger">⬇ Downvotes: </button>
         <button type="button" style="width: 22%" class="btn btn-warning">Add Comment</button>
         POST:
       </div>
       <div class="container-md2">
         <button type="button" style="width: 20%" class="btn btn-info">{{ USER }}</button>
-        <button type="button" style="width: 22%" class="btn btn-info">Comment</button>
-        <button type="button" style="width: 11%" class="btn btn-success">Upvotes: </button>
-        <button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button>
-        <button type="button" style="width: 11%" class="btn btn-danger">Downvotes: </button>
-        <button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button>
+        <button type="button" style="width: 20%" class="btn btn-info">Comment</button>
+        <button type="button" style="width: 18%" class="btn btn-success">⬆ Upvotes: </button>
+        <button type="button" style="width: 18%" class="btn btn-danger">⬇ Downvotes: </button>
         <button type="button" style="width: 22%" class="btn btn-warning">Add Comment</button>
         POST:
       </div>
