--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,18 +4,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <style>
+    @font-face {
+      font-family: myFirstFont;
+      src: url(/js/style/Acme-Regular.ttf)
+    }
+
+    * {
+      font-family: myFirstFont;
+    }
+  </style>
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      User Registry
-    </h1>
-  </header>
-  <main class="container container-fluid mt-5">
-    {{{ body }}}
-  </main>
+  <div class="headerContainer">
+    <div class="dashboardContainer">
+      <button type="button" style='width:125px' class="btn btn-outline-light">Home</button>
+
+      <button type="button" style='width:125px' class="btn btn-outline-light">Dashboard</button>
+      <!-- IF logged in then "Logout" button will appear-->
+      <!-- IF logged out then "Login" button will appear-->
+      <button type="button" style='width:125px' class="btn btn-outline-light">Login</button>
+    </div>
+    <div class="titleContainer">
+      <div>Pedal-Stool</div>
+    </div>
+    <div class="createpostsContainer">
+      <div id="zipDiv">
+        <button type="button" class="btn btn-outline-warning">Create New Post</button>
+      </div>
+    </div>
+  </div>
+  <div class="divider"></div>
+    <div  class="mainSection">
+      <div class="blogMain">
+        <div class="postManager">
+          {{{ body }}}
+        </div>
+      </div>
+    </div>
   <footer>
       
   </footer>
