--- a/public/js/style/style.css
+++ b/public/js/style/style.css
@@ -13,31 +13,19 @@
     height: 100px;
     display: flex;
     align-items: center;
-    justify-content:space-evenly;
+    justify-content:space-around;
     padding-bottom: 1px;
     width: 100%;
-    font-size: 70px;
+    font-size: 75px;
 }
 
 .dashboardContainer {
-    background-color: rgb(0, 46, 93);
     color: white;
     height: 78px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     width: 34%;
-    font-size: 50px;
-}
-
-.titleContainer {
-    background-color: rgb(0, 46, 93);
-    height: 78px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 34%;
-    font-size: 50px;
 }
 
 .createpostsContainer {
@@ -94,12 +82,6 @@
     padding-left: 10px;
 }
 
-.divider {
-    color: rb(255, 255, 255);
-    height: 2px;
-    size: 2000px;
-}
-
 .mainPage {
     background-image: linear-gradient(rgb(14, 184, 223), rgb(0, 46, 93));
     display: flex;
@@ -110,7 +92,7 @@
 .blogMain {
     padding-left: 20px;
     width: 50%;
-    background-image: linear-gradient(rgb(14, 184, 223), rgb(0, 46, 93));
+    background-image: linear-gradient(rgb(22, 199, 228), rgb(0, 46, 93));
     display: flex;
     align-items: top;
     flex-direction: center;
@@ -121,7 +103,7 @@
     padding-top: 80px;
     padding-left: 55px;
     width: 40%;
-    background-image: linear-gradient(rgb(14, 184, 223), rgb(0, 46, 93));
+    background-image: linear-gradient(rgb(22, 199, 228), rgb(0, 46, 93));
     display: flex;
     align-items: left;
     flex-direction: column;
