updates to css and handlebars

--- a/public/js/style/style.css
+++ b/public/js/style/style.css
@@ -114,7 +114,7 @@
     height: 350px;
     background-color: white;
     padding: 10px;
-    width: 1300px;
+    width: 100%;
     border-radius: 15px;
     border-style: solid;
     border-color: black;
