--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
       class="dashboardContainer">
       <div
         style="background-color:  rgb(0, 46, 93); width:50%; display:flex; align-items: center; justify-content:space-evenly; padding-right:10px">
-        <button type="button" style='width: 40%; height:10%' class="btn btn-outline-info">Home</button>
+        <button type="button" style='width: 40%; height:10%' class="btn btn-outline-info" id="homeBtn">Home</button>
         <button type="button" style='width: 40%; height:10%' class="btn btn-outline-info">Dashboard</button>
         <button type="button" style='width: 40%; height:10%' class="btn btn-outline-info">Login</button>
       </div>
@@ -55,6 +55,7 @@
   <footer>
 
   </footer>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
