--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,12 @@
 {{#each blogList as |blog| }}
-<div class="container-md1">
-  <button type="button" style="width: 22%" class="btn btn-info">{{blog.user.user_name}}</button>
-  <a href="/blogPost/{{id}}"> <button type="button" style="width: 25%" class="btn btn-info">{{blog.title}}</button> </a>
-  <a href="/upVote/{{id}}"><button type="button" style="width: 11%" class="btn btn-success">Upvotes: {{blog.up_votes}}</button></a>
-  <a href="/upVote/{{id}}"><button type="button" style="border-radius: 50%;" class="btn btn-success">⬆</button></a>
-  <a href="/downVote/{{id}}"><button type="button" style="width: 11%" class="btn btn-danger">Downvotes: {{blog.down_votes}}</button></a>
-  <a href="/downVote/{{id}}"><button type="button" style="border-radius: 50%;" class="btn btn-danger">⬇</button></a>
-  <button type="button" style="width: 20%" class="btn btn-warning">Add Comment</button>
+<div style="width:auto; max-width:95%; border-style:solid; padding:1%" class="container-md1">
+  <button type="button" style="width:fit-content" class="btn btn-info">{{blog.user.user_name}}</button>
+  <a href="/blogPost/{{id}}"> <button type="button" style="width:fit-content" class="btn btn-info">{{blog.title}}</button> </a>
+  <a href="/upVote/{{id}}"><button type="button" style="width:fit-content" class="btn btn-success">Upvotes: {{blog.up_votes}}</button></a>
+  <a href="/upVote/{{id}}"><button type="button" style="width:fit-content" class="btn btn-success">⬆</button></a>
+  <a href="/downVote/{{id}}"><button type="button" style="width:fit-content" class="btn btn-danger">Downvotes: {{blog.down_votes}}</button></a>
+  <a href="/downVote/{{id}}"><button type="button" style="width:fit-content" class="btn btn-danger">⬇</button></a>
+  <button type="button" style="width:fit-content" class="btn btn-warning">Add Comment</button>
   <p>{{blog.content}}</p>
 </div>
 {{/each }}
