--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -22,8 +23,13 @@
 </head>
 
 <body style="background-color: rgb(22, 199, 238">
+  <div class="pure-g">
+    <div class="pure-u-1-3"><p></p></div>
+    <div class="pure-u-1-3"><p></p></div>
+    <div class="pure-u-1-3"><p></p></div>
+</div>
   <div
-    style="padding-left: 2%; padding: 1%; width: 100%; background-color: rgb(0, 46, 93); height:15%; display:flex; align-items: center; justify-content:space-evenly;"
+    style="padding-left: 2%; padding: 1%; width: 100%; background-color: rgb(0, 46, 93); height:19%; display:flex; align-items: center; justify-content:space-evenly;"
     class="headerContainer">
     <div style="width:95%;  padding-left:2% ; background-color:rgb(0, 46, 93); display:flex; align-items: center; justify-content:space-evenly"
       class="dashboardContainer">
@@ -32,6 +38,7 @@
         <button type="button" style='width: 40%; height:10%' class="btn btn-outline-info" id="homeBtn">Home</button>
         <button type="button" style='width: 40%; height:10%' class="btn btn-outline-info">Dashboard</button>
         <button type="button" style='width: 40%; height:10%' class="btn btn-outline-info">Login</button>
+</button>
       </div>
       <div
         style="width:70%; height:100% display:left; background-color:rgb(0, 46, 93); display:flex; align-items: center; justify-content:space-evenly;"
